# booktrack

./: .gitignore
ai_instructions/: project_plan_booktrack_1_0.md  project_plan_booktrack_1_5.md  project_plan_booktrack_1_6.md  technical_considerations.md
kotlin/: GOOGLE_BOOKS_API_SETUP.md  settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/androidTest/java/com/example/booktrack/: ExampleInstrumentedTest.kt
kotlin/app/src/main/: AndroidManifest.xml
kotlin/app/src/main/java/com/example/booktrack/: MainActivity.kt
kotlin/app/src/main/java/com/example/booktrack/data/api/: GoogleBooksApi.kt
kotlin/app/src/main/java/com/example/booktrack/data/converters/: Converters.kt
kotlin/app/src/main/java/com/example/booktrack/data/dao/: BookDao.kt  ReadingLogDao.kt
kotlin/app/src/main/java/com/example/booktrack/data/database/: AppDatabase.kt  Book.kt  (+5 more)
kotlin/app/src/main/java/com/example/booktrack/services/: TimerService.kt
kotlin/app/src/main/res/navigation/: mobile_navigation.xml
kotlin/app/src/main/res/values/: strings.xml  themes.xml
kotlin/app/src/test/java/com/example/booktrack/: ExampleUnitTest.kt
kotlin/gradle/: libs.versions.toml
kotlin/gradle/wrapper/: gradle-wrapper.properties
python/: .gitignore  LICENSE  README.md  TESTING.md  TEST_GUIDE.md  pyproject.toml  requirements-android.txt  requirements.txt  run_tests.py  sdd_booktrack_1_0.md  sdd_booktrack_1_1.md  setup.py  setup_package.py
python/src/booktrack/: __init__.py  __main__.py  app.py  database.py  timer.py  widgets.py
python/tests/: __init__.py  test_booktrack.py
(+37 files in other folders)
